# crustpy

./: 파이썬입문스터디01사전모임.pptx  파이썬입문스터디02개발환경설정.pptx  파이썬입문스터디03변수함수클래스.pptx  파이썬입문스터디04단계별확인문제.pptx  파이썬입문스터디05활용예제분석.pptx  파이썬입문스터디06코딩에관하여.pptx
compbook/: compbook_1_api_xml_json.py  compbook_2_csv_xlsx.py  pyproject.toml  requirements.txt
notebook/: 마지막시간.ipynb
qrvcard/: README.txt  qrvcard.py  test.py
voice/: README.txt  test.py
